kube/services/netpolicy/gen3/auth_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-auth-egress
spec:
  podSelector: {}
  egress:
    - to:
      - podSelector:
          matchLabels:
            authprovider: "yes"
  policyTypes:
   - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-auth-ingress
spec:
  podSelector: 
    matchLabels:
      authprovider: "yes"
  ingress:
    - from:
      - podSelector: {}
  policyTypes:
   - Ingress
