kube/services/netpolicy/gen3/linklocal_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-public
spec:
  podSelector:
    matchLabels:
      linklocal: "yes"
  egress:
    - to:
      - ipBlock:
          cidr: 169.254.0.0/16
  policyTypes:
   - Egress
