kube/services/netpolicy/gen3/nolimit_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-public
spec:
  podSelector:
    matchLabels:
      netnolimit: "yes"
  egress:
    - {}  
  policyTypes:
   - Egress
