kube/services/netpolicy/gen3/public_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolicy-public
spec:
  podSelector:
    matchLabels:
      public: "yes"
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: revproxy
      ports:
         - port: 80
         - port: 443
  policyTypes:
   - Ingress
