kube/services/netpolicy/gen3/userhelper_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-auth
spec:
  podSelector:
    matchLabels:
      userhelper: "yes"
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            role: "usercode"
  policyTypes:
   - Ingress
